--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
-    "react-script-tag": "^1.1.2"
+    "react-script-tag": "^1.1.2",
+    "react-scroll-parallax": "^2.3.4"
   },
   "devDependencies": {
     "prettier": "2.0.5"
