--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "axios": "^0.20.0",
+    "firebase-login": "^1.0.0",
+    "firebase-tools": "^8.13.1",
     "gatsby": "^2.24.47",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-load-script": "^1.1.0",
